--- a/index.html
+++ b/index.html
@@ -6,24 +6,24 @@
   </head>
   <body>
     <header class="main-header">
-      <nav class="main-navigation">
+      <nav class="navigation">
         <img class="header-logo" src="img/logo.svg" width="154" height="64" alt="logo Gllacy Shop">
-        <ul class="navigation">
-          <li><a href="#">Каталог</a>
-          <ul class="catalog">
-            <li><a href="#"><b>Новинки<b></a></li>
-            <li><a href="catalog.html">Сливочное</a></li>
-            <li><a href="#">Щербеты</a></li>
-            <li><a href="#">Фруктовый лед</a></li>
-            <li><a href="#">Мелорин</a></li>
+        <ul class="navigation-list">
+          <li class="navigation-list__item open-item"><a class="navigation-list__link" href="#">Каталог</a>
+          <ul class="navigation-menu">
+            <li class="navigation-menu__item"><a class="navigation-menu__link" href="#"><b>Новинки</b></a></li>
+            <li class="navigation-menu__item"><a class="navigation-menu__link" href="catalog.html">Сливочное</a></li>
+            <li class="navigation-menu__item"><a class="navigation-menu__link" href="#">Щербеты</a></li>
+            <li class="navigation-menu__item"><a class="navigation-menu__link" href="#">Фруктовый лед</a></li>
+            <li class="navigation-menu__item"><a class="navigation-menu__link" href="#">Мелорин</a></li>
           </ul></li>
-          <li><a href="#">Доставка и оплата</a></li>
-          <li><a href="#">О Компании</a></li>
+          <li class="navigation-list__item"><a class="navigation-list__link" href="#">Доставка и оплата</a></li>
+          <li class="navigation-list__item"><a class="navigation-list__link" href="#">О Компании</a></li>
         </ul>
         <ul class="user-navigation">
-          <li class="search">Поиск</li>
-          <li class="login">Вход</li>
-          <li class="basket">Корзина</li>
+          <li class="user-navigation__search">Поиск</li>
+          <li class="user-navigation__login">Вход</li>
+          <li class="user-navigation__basket">Корзина</li>
         </ul>
       </nav>
       <p class="header-time-info">С 10 до 20,ежедневно<br>
@@ -32,112 +32,117 @@
     <main class="container">
       <h1 class="visually-hidden">Gllacy Shop</h1>
       <div class="slider">
-        <ul class="slider-image">
-          <li>
-            <img src="img/slid-1.png" width="1045" height="881" alt="Пломбир">
-            <p class="slid-text">Крем-брюле и пломбир с малиновым джемом</p>
+        <ul class="slider-list">
+          <li class="slider-item">
+            <img class="slider-item__image" src="img/slid-1.png" width="1045" height="881" alt="Пломбир">
+            <p class="slider-item__title">Крем-брюле и пломбир с малиновым джемом</p>
           </li>
           <li>
-            <img src="img/slid-2.png" width="1045" height="881" alt="Шоколадный пломбир">
-            <p class="slid-text">Шоколадный пломбир и лимонный сорбет</p>
+            <img class="slider-item__image" src="img/slid-2.png" width="1045" height="881" alt="Шоколадный пломбир">
+            <p class="slider-item__title">Шоколадный пломбир и лимонный сорбет</p>
           </li>
           <li>
-            <img src="img/slid-3.png" width="1045" height="881" alt="Пломбир с помадкой">
-            <p class="slid-text">Пломбир с помадкой и клубничный щербет</p>
+            <img class="slider-item__image" src="img/slid-3.png" width="1045" height="881" alt="Пломбир с помадкой">
+            <p class="slider-item__title">Пломбир с помадкой и клубничный щербет</p>
           </li>
         </ul>
         <!--input type="radio"  ?? -->
-        <a class="button" href="#">Давайте оба!</a>
+        <a class="button big" href="#">Давайте оба!</a>
       </div>
       <section class="offers">
-        <article class="offers-jam">
-          <h2>Малинка даром!</h2>
-          <p>При покупке 2 кг любого фруктового мороженого,добавим в ваш заказ банку малинового варенья бесплатно.</p>
-          <a class="button jam" href="#">Хочу варенье!</a>
+        <article class="offers-item jam">
+          <h2 class="offers-item__head">Малинка даром!</h2>
+          <p class="offers-item__info">При покупке 2 кг любого фруктового мороженого,добавим в ваш заказ банку малинового варенья бесплатно.</p>
+          <a class="button" href="#">Хочу варенье!</a>
         </article>
-        <article class="offers-chocolate">
-          <h2>Шоколадки даром!</h2>
-          <p>При покупке 2 кг пломбира,добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно</p>
-          <a class="button chocolate" href="#">Хочу шоколадки!</a>
+        <article class="offers-item chocolate">
+          <h2 class="offers-item__head">Шоколадки даром!</h2>
+          <p class="offers-item__info">При покупке 2 кг пломбира,добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно</p>
+          <a class="button" href="#">Хочу шоколадки!</a>
         </article>
       </section>
-      <ul class="bestseller-item">
-        <li>
-          <img src="img/bestseller-1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
-          <p class="price">310 ₽<span>/кг</span></p>
-          <p class="description"><a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a></p>
-          <button type="button" class="hover">Быстрый просмотр</button>
-        </li>
-        <li>
-          <img src="img/bestseller-2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
-          <p class="price">380 ₽<span>/кг</span></p>
-          <p class="description"><a href="#">Сливочно-кофейное с кусочками шоколада</a></p>
-          <button type="button" class="hover">Быстрый просмотр</button>
-        </li>
-        <li>
-          <img src="img/bestseller-3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
-          <p class="price">355 ₽<span>/кг</span></p>
-          <p class="description"><a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a></p>
-          <button type="button" class="hover">Быстрый просмотр</button>
-        </li>
-        <li>
-          <img src="img/bestseller-4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
-          <p class="price">415 ₽<span>/кг</span></p>
-          <p class="description"><a href="#">Сливочное крем-брюле с карамельной подливкой</a></p>
-          <button type="button" class="hover">Быстрый просмотр</button>
-        </li>
-      </ul>
-      <div class="info-gllacy">
-        <h3>Магазин Глэйси - это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h3>
-        <ul class="about-ice-cream">
-          <li>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</li>
-          <li>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</li>
-          <li>Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</li>
-          <li>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li>
-        </ul>
-      </div>
-      <div class="info">
-        <article class="blog">
-          <h2>"Новое в нашем блоге"</h2>
-          <p class="blog-article"><a href="#">10 способов сервировки фруктовых щербетов к столу</a></p>
-        </article>
-        <section class="subscribe">
-          <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно=)</p>
-          <!-- Форма -->
-        </section>
-      </div>
-      <section class="map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.599104370522!2d30.320889251890595!3d59.938794181787266!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+Street%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2slv!4v1528043560284" width="100%" height="430" frameborder="0" style="border:0" allowfullscreen></iframe>
-        <div class="address">
-          <p>Адрес главного офиса и офлайн-магазина:<b>ул.Большая Конюшенная 19/8,Санкт-Петербург</b></p>
-          <p>Для заказов по телефону:<b>8 812 450-25-25</b>(с 10 до 20 ежедневно)</p>
-          <button type="button">Форма обратной связи</button>
-        </div>
-      </section>
-    </main>
-    <footer>
-      <ul class="footer-social">
-        <li><a class="social-buttom twitter" href="#">Твитер</a></li>
-        <li><a class="social-buttom insta" href="#">Инстаграм</a></li>
-        <li><a class="social-buttom fb" href="#">Фейсбук</a></li>
-        <li><a class="social-buttom vk" href="#">Вконтакте</a></li>
-      </ul>
-      <ul class="footer-info">
-        <li><a href="#">Для поставщиков</a></li>
-        <li><a href="#">Наши документы</a></li>
-        <li><a href="#">О производстве</a></li>
-        <li><a href="#">Экологические стандарты</a></li>
-      </ul>
-      <div class="footer-copyright">
-        <img class="html-logo" src="img/logo-htmlacademy.svg" width="108" height="39">
-        <p>Сделано в <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> &copy; 2017</p>
-      </div>
-    </footer>
-    <!--Всплывающее окно -->
-    <section class="modal">
-      <h3>Мы обязательно вам ответим!</h3>
-      <span class="modal-close">X</span>  <!--для закрытия окна -->
-      <!--Форма-->
-    </section>
-  </body>
-</html>
+      <ul class="products">
+        <li class="icy-cream">
+          <a class="icy-cream__link" href="#">
+            <img class="icy-cream__img" src="img/bestseller-1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+            <p class="icy-cream__info">310 ₽<span class="icy-cream__info_weight">/кг</span></p>
+            <p class="icy-cream__description">Сливочное с апельсиновым джемом и цитрусовой стружкой</p></a>
+            <button type="button" class="button hover">Быстрый просмотр</button>
+          </li>
+          <li class="icy-cream">
+            <a class="icy-cream__link" href="#">
+              <img class="icy-cream__img" src="img/bestseller-2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
+              <p class="icy-cream__info">380 ₽<span class="icy-cream__info_weight">/кг</span></p>
+              <p class="icy-cream__description">Сливочно-кофейное с кусочками шоколада</p></a>
+              <button type="button" class="button hover">Быстрый просмотр</button>
+            </li>
+            <li class="icy-cream">
+              <a class="icy-cream__link" href="#">
+                <img class="icy-cream__img" src="img/bestseller-3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+                <p class="icy-cream__info">355 ₽<span class="icy-cream__info_weight">/кг</span></p>
+                <p class="icy-cream__description">Сливочно-клубничное с присыпкой из белого шоколада</p></a>
+                <button type="button" class="button hover">Быстрый просмотр</button>
+              </li>
+              <li class="icy-cream">
+                <a class="icy-cream__link" href="#">
+                  <img class="icy-cream__img" src="img/bestseller-4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
+                  <p class="icy-cream__info">415 ₽<span class="icy-cream__info_weight">/кг</span></p>
+                  <p class="icy-cream__description">Сливочное крем-брюле с карамельной подливкой</p></a>
+                  <button type="button" class="button hover">Быстрый просмотр</button>
+                </li>
+              </ul>
+              <div class="info-gllacy">
+                <h3 class="info-gllacy__title">Магазин Глэйси - это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h3>
+                <ul class="about-ice-cream">
+                  <li class="about-ice-cream__info">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</li>
+                  <li class="about-ice-cream__info">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</li>
+                  <li class="about-ice-cream__info">Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</li>
+                  <li class="about-ice-cream__info">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li>
+                </ul>
+              </div>
+              <div class="block">
+                <article class="blog">
+                  <h2 class="blog__title">Новое в нашем блоге</h2>
+                  <a class="blog__article-link" href="#">10 способов сервировки фруктовых щербетов к столу</a>
+                </article>
+                <section class="subscribe">
+                  <p class="subscribe__info">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно=)</p>
+                  <!-- Форма -->
+                  <button class="button" type="button">Отправить</button>
+                </section>
+              </div>
+              <section class="map">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.599104370522!2d30.320889251890595!3d59.938794181787266!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+Street%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2slv!4v1528043560284" width="100%" height="430" frameborder="0" style="border:0" allowfullscreen></iframe>
+                <div class="address">
+                  <p class="address__street">Адрес главного офиса и офлайн-магазина:<b>ул.Большая Конюшенная 19/8,Санкт-Петербург</b></p>
+                  <p class="address__phone">Для заказов по телефону:<b>8 812 450-25-25</b>(с 10 до 20 ежедневно)</p>
+                  <button type="button" class="button">Форма обратной связи</button>
+                </div>
+              </section>
+            </main>
+            <footer class="main-footer">
+              <ul class="social-btn">
+                <li class="social-btn__item"><a class="social-btn__link twitter" href="#">Твитер</a></li>
+                <li class="social-btn__item"><a class="social-btn__link insta" href="#">Инстаграм</a></li>
+                <li class="social-btn__item"><a class="social-btn__link fb" href="#">Фейсбук</a></li>
+                <li class="social-btn__item"><a class="social-btn__link vk" href="#">Вконтакте</a></li>
+              </ul>
+              <ul class="helpful-info">
+                <li class="helpful-info__item heart"><a class="helpful-info__link" href="#">Для поставщиков</a></li>
+                <li class="helpful-info__item"><a class="helpful-info__link" href="#">Наши документы</a></li>
+                <li class="helpful-info__item"><a class="helpful-info__link" href="#">О производстве</a></li>
+                <li class="helpful-info__item"><a class="helpful-info__link" href="#">Экологические стандарты</a></li>
+              </ul>
+              <div class="footer-copyright">
+                <img class="html-logo" alt="html academy" src="img/logo-htmlacademy.svg" width="108" height="39">
+                <p class="made-in">Сделано в <a class="footer-info__link" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> &copy; 2017</p>
+              </div>
+            </footer>
+            <!--Всплывающее окно -->
+            <section class="modal">
+              <h3>Мы обязательно вам ответим!</h3>
+              <span class="modal-close">X</span>  <!--для закрытия окна -->
+              <!--Форма-->
+            </section>
+          </body>
+        </html>
